k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: yahoo-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: yahoo-chat
      labels:
        app: backend
    spec:
      containers:
        - name: chatapp-backend
          image: arnaba075/chatapp-backend:v5
          ports:
            - containerPort: 5000
